examples/errors/missing_return/main.hd
fn get_value(): int {
    let x = 42;
}

fn main(): int {
    return 0;
}
